appId: app.tomevoice.tomevoice_spike
---
- launchApp:
    clearState: false
- tapOn: ".*Specimen.*"
- tapOn: "Library"
- assertVisible: "Library"
- assertVisible: ".*Specimen.*"
